getting an error:- Server Error Error: Element type is invalid: expected a string (for built-in components) or a class/function (for composite components) but got: undefined. You likely forgot to export your component from the file it's defined in, or you might have mixed up default and named imports.

--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 # Authentication
-GOOGLE_ID=key_goes_here
-GOOGLE_SECRET=key_goes_here
+GOOGLE_ID=1099151145075-kr7phf42ktmi2hihl2kmvp6vupkfto9s.apps.googleusercontent.com
+GOOGLE_SECRET=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
 NEXTAUTH_URL=http://localhost:3000
 
 # Stripe
@@ -14,3 +14,11 @@ HOST=http://localhost:3000
 
 # Need to add this to... google cloud
 # http://localhost:3000/api/auth/callback/google
+
+#1099151145075-kr7phf42ktmi2hihl2kmvp6vupkfto9s.apps.googleusercontent.com
+#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
+
+
+tried already
+#555717719245-teq0ho64he8tvvbnj3bcecv2liutb9a5.apps.googleusercontent.com
+#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
