--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "react-scripts --openssl-legacy-provider start"
+    "start": "next start"
   },
   "dependencies": {
     "@heroicons/react": "v1",
