--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
   "dependencies": {
     "@heroicons/react": "v1",
     "@reduxjs/toolkit": "1.5.0",
+    "@stripe/stripe-js": "^1.46.0",
     "@tailwindcss/line-clamp": "^0.2.0",
+    "axios": "^1.3.3",
     "firebase": "^9.17.1",
-    "firebase-admin": "^9.8.0",
+    "firebase-admin": "^11.5.0",
+    "micro": "^10.0.1",
     "next": "latest",
     "next-auth": "^4.19.2",
     "react": "17.0.1",
     "react-currency-formatter": "^1.1.0",
     "react-dom": "17.0.1",
     "react-redux": "7.2.2",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "react-stripe-elements": "^6.1.2",
+    "stripe": "^11.10.0"
   },
   "license": "MIT",
   "devDependencies": {
