--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^9.17.1",
     "firebase-admin": "^11.5.0",
     "micro": "^10.0.1",
+    "moment": "^2.29.4",
     "next": "latest",
     "next-auth": "^4.19.2",
     "react": "17.0.1",
