--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "with-redux-toolkit",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next",
+    "dev": "next dev",
+    "start": "next start",
     "build": "next build",
-    "start": "next start"
+    "export": "next export",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "@heroicons/react": "v1",
