--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "firebase-admin": "^11.5.0",
     "micro": "^10.0.1",
     "moment": "^2.29.4",
-    "next": "latest",
+    "next": "^13.1.6",
     "next-auth": "^4.19.2",
     "react": "17.0.1",
     "react-currency-formatter": "^1.1.0",
